// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProvidersPage > renders empty state 1`] = `
<div>
  <div
    class="space-y-6"
  >
    <div
      class="flex items-center justify-between"
    >
      <h1
        class="text-2xl font-semibold"
      >
        Providers
      </h1>
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        class="group/button inline-flex shrink-0 items-center justify-center rounded-lg border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground [a]:hover:bg-primary/80 h-8 gap-1.5 px-2.5 has-data-[icon=inline-end]:pr-2 has-data-[icon=inline-start]:pl-2"
        data-base-ui-click-trigger=""
        data-slot="dialog-trigger"
        id="base-ui-_r_7_"
        tabindex="0"
        type="button"
      >
        Create Provider
      </button>
    </div>
    <div
      class="flex gap-2 items-center"
    >
      <label
        class="flex items-center gap-2 font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm"
        data-slot="label"
      >
        Filter by Org:
      </label>
      <select
        class="flex h-9 rounded-md border border-input bg-transparent px-3 py-1 text-sm"
      >
        <option
          value=""
        >
          All
        </option>
      </select>
    </div>
    <div
      class="group/card flex flex-col gap-4 overflow-hidden rounded-xl bg-card py-4 text-sm text-card-foreground ring-1 ring-foreground/10 has-data-[slot=card-footer]:pb-0 has-[>img:first-child]:pt-0 data-[size=sm]:gap-3 data-[size=sm]:py-3 data-[size=sm]:has-data-[slot=card-footer]:pb-0 *:[img:first-child]:rounded-t-xl *:[img:last-child]:rounded-b-xl"
      data-size="default"
      data-slot="card"
    >
      <div
        class="group/card-header @container/card-header grid auto-rows-min items-start gap-1 rounded-t-xl px-4 group-data-[size=sm]/card:px-3 has-data-[slot=card-action]:grid-cols-[1fr_auto] has-data-[slot=card-description]:grid-rows-[auto_auto] [.border-b]:pb-4 group-data-[size=sm]/card:[.border-b]:pb-3"
        data-slot="card-header"
      >
        <div
          class="font-heading text-base leading-snug font-medium group-data-[size=sm]/card:text-sm"
          data-slot="card-title"
        >
          All Providers
        </div>
      </div>
      <div
        class="px-4 group-data-[size=sm]/card:px-3"
        data-slot="card-content"
      >
        <p
          class="text-muted-foreground"
        >
          Loading...
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProvidersPage > renders with data 1`] = `
<div>
  <div
    class="space-y-6"
  >
    <div
      class="flex items-center justify-between"
    >
      <h1
        class="text-2xl font-semibold"
      >
        Providers
      </h1>
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        class="group/button inline-flex shrink-0 items-center justify-center rounded-lg border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground [a]:hover:bg-primary/80 h-8 gap-1.5 px-2.5 has-data-[icon=inline-end]:pr-2 has-data-[icon=inline-start]:pl-2"
        data-base-ui-click-trigger=""
        data-slot="dialog-trigger"
        id="base-ui-_r_2_"
        tabindex="0"
        type="button"
      >
        Create Provider
      </button>
    </div>
    <div
      class="flex gap-2 items-center"
    >
      <label
        class="flex items-center gap-2 font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm"
        data-slot="label"
      >
        Filter by Org:
      </label>
      <select
        class="flex h-9 rounded-md border border-input bg-transparent px-3 py-1 text-sm"
      >
        <option
          value=""
        >
          All
        </option>
      </select>
    </div>
    <div
      class="group/card flex flex-col gap-4 overflow-hidden rounded-xl bg-card py-4 text-sm text-card-foreground ring-1 ring-foreground/10 has-data-[slot=card-footer]:pb-0 has-[>img:first-child]:pt-0 data-[size=sm]:gap-3 data-[size=sm]:py-3 data-[size=sm]:has-data-[slot=card-footer]:pb-0 *:[img:first-child]:rounded-t-xl *:[img:last-child]:rounded-b-xl"
      data-size="default"
      data-slot="card"
    >
      <div
        class="group/card-header @container/card-header grid auto-rows-min items-start gap-1 rounded-t-xl px-4 group-data-[size=sm]/card:px-3 has-data-[slot=card-action]:grid-cols-[1fr_auto] has-data-[slot=card-description]:grid-rows-[auto_auto] [.border-b]:pb-4 group-data-[size=sm]/card:[.border-b]:pb-3"
        data-slot="card-header"
      >
        <div
          class="font-heading text-base leading-snug font-medium group-data-[size=sm]/card:text-sm"
          data-slot="card-title"
        >
          All Providers
        </div>
      </div>
      <div
        class="px-4 group-data-[size=sm]/card:px-3"
        data-slot="card-content"
      >
        <p
          class="text-muted-foreground"
        >
          Loading...
        </p>
      </div>
    </div>
  </div>
</div>
`;
